--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ activité partie 2/.DS_Store
 activité partie 2/assets/.DS_Store
 activite partie 3/assets/.DS_Store
 activite partie 3/.DS_Store
+activite 2/.DS_Store
+activite 2/assets/.DS_Store
+activite 3/assets/.DS_Store
